fix table spacing, remove iframe for map, just leave link

--- a/wedding.css
+++ b/wedding.css
@@ -24,15 +24,18 @@ body {
 
 #leftbox {
     vertical-align: top; 
-    width: 60%; 
+    width: 500px; 
+    text-align: left;
+    padding: 15px;
 }
 
 #rightbox {
     vertical-align: text-top; 
-    width: 50%; 
+    width: 300px; 
+    padding: 15px;
 }
 
 .imgborder {
-   padding:1px;
-   border:1px solid black;
+   padding: 2px;
+   border: 2px solid black;
 }
